# envoy

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  eslint.config.mjs  middleware.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  samconfig.toml  template.yaml  tsconfig.json  vercel.json
admin-ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
app/: globals.css  layout.tsx  page.tsx  providers.tsx
components/: EmailBuilderEditor.tsx  EmailMetricsChart.tsx  Layout.tsx  MetricSelector.tsx
docs/: sequence-system-design.md
lib/: agentplane-proxy-client.ts  agentplane.ts  api.ts  auth-client.ts  auth-context.tsx  block-compiler.ts  cron-utils.ts  db.ts  email.ts  env.ts  graduation.ts  insane.d.ts  mcp-tools.ts  oauth-html.ts  oauth.ts  personalization.ts  phone.ts  schemas.ts  ses.ts  sns-validator.d.ts  sns-verify.ts  template-engine.ts  webhook-auth.ts
migrations/: 002_indexes.sql  004_seed_admin.sql  005_fix_admin_password.sql  006_oauth.sql  007_fix_oauth_codes.sql  009_targets_phone.sql  011_outbox.sql  012_targets_metadata.sql  013_design_templates.sql  013_sequences.sql  014_sequences_optional_target_type.sql  015_org_email_domain.sql  016_design_templates.sql  017_email_sends_outbox_id.sql  018_maven_service_runtime.sql  019_drop_outbox_skill_columns.sql  020_design_templates_maily.sql  021_rename_maily_to_builder.sql  022_sequence_steps_content.sql  023_drop_mjml_columns.sql  024_drop_content_design_template_id.sql  025_sequence_default_for_target_type.sql  (+13 more)
(+551 files in other folders)
